--- a/全友家居/css/index.css
+++ b/全友家居/css/index.css
@@ -280,6 +280,13 @@
 .qy-slider ul li {
     position: absolute;
     display: none;
+    width: 100%;
+    height: 100%;
+}
+
+.qy-slider ul li img {
+    width: 100%;
+    height: 100%;
 }
 
 .qy-slider ul li:first-child {
@@ -310,4 +317,27 @@
     width: 1280px;
     margin: 65px auto;
     height: 140px;
+}
+
+.qy-time a {
+    width: 24.5%;
+    text-align: center;
+    display: inline-block;
+}
+
+.qy-time a div:first-child {
+    color: #a0a0a0;
+    font-size: 16px;
+}
+
+.qy-time a div:nth-child(2) {
+    color: #0bb78e;
+    font-size: 60px;
+    margin: 8px 0px;
+    font-family: homeNumFont;
+}
+
+.qy-time a div:nth-child(3) {
+    color: #a0a0a0;
+    font-size: 16px;
 }
