--- a/css/house.css
+++ b/css/house.css
@@ -309,6 +309,7 @@
     margin-top: 13px;
     margin-left: 12px;
     margin-bottom: 5px;
+    margin-right: 5px;
 }
 
 .house-nav-left-mian p {
@@ -554,20 +555,9 @@
 
 /* 轮播图 */
 
-.house-slider {
+#box {
     width: 100%;
     height: 550px;
-    position: relative;
-    overflow: hidden;
-    margin-bottom: 30px
-}
-
-.house-slider ul {
-    width: 100%;
-}
-
-.house-slider ul li {
-    float: left;
 }
 
 
@@ -1283,6 +1273,7 @@
     height: 295px;
     width: 100%;
     background-image: url(../images/house/sheji-13.jpg);
+    margin-bottom: 80px;
 }
 
 .house-sale-main a {
@@ -1296,6 +1287,7 @@
     transition: all .3s;
     margin-top: 80px;
     overflow: hidden;
+    /* visibility: hidden; */
 }
 
 .house-sale-main a:first-child {
@@ -1373,4 +1365,411 @@
 
 .house-sale-main a:hover div:last-child {
     opacity: 1;
+}
+
+
+/* 新闻 */
+
+.house-news {
+    margin-bottom: 60px;
+}
+
+.house-news-main {
+    width: 195px;
+    margin: 0 auto;
+    margin-bottom: 20px;
+}
+
+.house-news-main h2 {
+    font-size: 24px;
+    text-align: center;
+    font-weight: 400;
+}
+
+.house-news-main p {
+    text-align: center;
+    opacity: .6;
+    font-size: 12px;
+    margin-bottom: 10px;
+    padding-top: 2px;
+}
+
+.house-news-main-nav {
+    border-top: 1px solid rgba(0, 0, 0, .3);
+    padding-top: 5px;
+    text-align: center;
+    padding-bottom: 20px;
+}
+
+.house-news-main-nav a {
+    float: left;
+    padding-right: 3px;
+    padding-left: 3px;
+    color: #878787;
+    transition: all 0.6s;
+    font-size: 14px;
+}
+
+.house-news-main-nav span {
+    float: left;
+    color: #878787;
+    font-size: 14px;
+}
+
+.house-news-main-nav a:hover {
+    color: #87d5bb;
+}
+
+.house-news-main>a {
+    display: block;
+    background-color: #3DC094;
+    width: 130px;
+    height: 35px;
+    border-radius: 35px;
+    margin: 0 auto;
+    color: #fff;
+    text-align: center;
+    line-height: 35px;
+    margin-top: 35px;
+    transition: all 0.6s;
+}
+
+.house-news-main>a:hover {
+    color: #ffffff;
+    background-color: #258566;
+}
+
+
+/* 底部 */
+
+.house-floor-top ul {
+    float: left;
+    width: 930px;
+    height: 100px;
+}
+
+.house-floor-top ul li {
+    float: left;
+    margin-right: 30px;
+}
+
+.house-floor-top ul li:last-child {
+    margin-right: 5px;
+}
+
+.house-floor-top ul li i {
+    display: block;
+    width: 30px;
+    height: 32px;
+    background: url(../images/house/icon-sum.png) no-repeat;
+    background-position: -237px -332px;
+    float: left;
+    margin-top: 34px;
+    margin-right: 10px;
+}
+
+.house-floor-top ul li:nth-child(1) i {
+    margin-right: 5px;
+}
+
+.house-floor-top ul li:nth-child(2) i {
+    background-position: -269px -329px;
+}
+
+.house-floor-top ul li:nth-child(3) i {
+    background-position: -304px -328px;
+}
+
+.house-floor-top ul li:nth-child(4) i {
+    background-position: -337px -328px;
+}
+
+.house-floor-top ul li:nth-child(5) i {
+    background-position: -370px -325px;
+}
+
+.house-floor-top ul li:nth-child(6) i {
+    background-position: -230px -367px;
+}
+
+.house-floor-top ul li .right {
+    float: left;
+}
+
+.house-floor-top ul li .right h4 {
+    font-size: 14px;
+    height: 18px;
+    padding-top: 34px;
+}
+
+.house-floor-top ul li .right p {
+    opacity: .6;
+    font-size: 12px;
+}
+
+.house-floor-phone {
+    height: 60px;
+    border-left: 1px solid #dcdcdc;
+    float: right;
+    padding-left: 25px;
+    margin-top: 20px;
+    width: 230px;
+}
+
+.house-floor-phone>div {
+    font-size: 20px;
+    color: #EA5404;
+    width: 100%;
+    text-align: right;
+    line-height: 25px;
+    letter-spacing: 2px;
+}
+
+.house-floor-phone>div i {
+    width: 26px;
+    height: 26px;
+    background: url(../images/house/icon-sum.png) no-repeat;
+    background-position: -270px -368px;
+    float: left;
+    display: block;
+    margin-left: 36px;
+    margin-right: 6px;
+}
+
+.house-floor-phone p {
+    font-size: 26px;
+    color: #EA5404;
+    text-align: right;
+}
+
+.house-floor-bottom {
+    background-color: #258566;
+}
+
+.house-floor-bottom-top {
+    overflow: hidden;
+    height: 70px;
+    width: 100%;
+    border-bottom: 1px solid #67aa94;
+}
+
+.house-floor-bottom-top .left li {
+    float: left;
+    font-size: 14px;
+    color: #bddad1;
+    line-height: 90px;
+    margin-right: 60px;
+}
+
+.house-floor-bottom-top .right {
+    float: right;
+    margin-top: 10px;
+}
+
+.house-floor-bottom-top .right a {
+    display: block;
+    width: 200px;
+    height: 60px;
+}
+
+.house-floor-bottom-top .right a img {
+    width: 100%;
+}
+
+.house-floor-bottom-mid {
+    padding-bottom: 20px;
+    overflow: hidden;
+    position: relative;
+}
+
+.house-floor-one {
+    width: 100px;
+    float: left;
+    margin-right: 29px;
+}
+
+.house-floor-one a {
+    display: block;
+    margin-top: 19px;
+    color: #bddad1;
+    font-size: 14px;
+}
+
+.house-floor-one:nth-child(3) {
+    margin-left: 2px;
+    margin-right: 0;
+}
+
+.house-floor-one:nth-child(4) {
+    margin-left: 8px;
+    margin-right: 0;
+}
+
+.house-floor-one:nth-child(5) {
+    margin-left: 19px;
+}
+
+.house-floor-two {
+    float: right;
+    margin-top: 31px;
+}
+
+.house-floor-two-img {
+    width: 120px;
+    height: 135px;
+    text-align: center;
+    margin-left: 48px;
+    padding-top: 7px;
+}
+
+.house-floor-two-img img {
+    margin: 0 auto;
+}
+
+.house-floor-two-img span {
+    font-size: 14px;
+    display: block;
+    color: #bddad1;
+    width: 150px;
+    margin-left: -15px;
+    margin-top: 5px;
+}
+
+.house-floor-two .tel {
+    margin-top: 31px;
+}
+
+.house-floor-two p {
+    color: #bddad1;
+    text-align: right;
+    line-height: 20px;
+    font-size: 14px;
+}
+
+.house-floor-three {
+    position: absolute;
+    bottom: 21px;
+    left: 0;
+}
+
+.house-floor-three a {
+    display: inline-block;
+    width: 85px;
+    height: 20px;
+    border: 1px solid #92c2b2;
+    border-radius: 10px;
+    text-align: center;
+    color: #92c2b2;
+    margin-right: 25px;
+    line-height: 20px;
+    font-size: 14px;
+}
+
+.house-floor-floor {
+    border-top: 1px solid #67aa94;
+}
+
+.house-floor-floor-left {
+    font-size: 12px;
+    color: #92c2b2;
+    float: left;
+    line-height: 40px;
+}
+
+.house-floor-floor-left a {
+    display: block;
+    margin-top: -20px;
+    color: #92c2b2;
+    font-size: 12px;
+}
+
+.house-floor-floor-right {
+    float: right;
+    margin: 10px 0;
+}
+
+.house-floor-floor-right p {
+    text-align: right;
+    color: #92c2b2;
+    font-size: 12px;
+}
+
+
+/* 侧边导航 */
+
+.side-nav {
+    position: fixed;
+    right: 30px;
+    width: 60px;
+    height: 200px;
+    z-index: 100;
+    margin-top: -100px;
+    top: 50%;
+}
+
+.side-nav a {
+    display: block;
+    width: 39px;
+    height: 39px;
+    font-size: 14px;
+    background: #3DC094;
+    line-height: 39px;
+    text-align: center;
+    color: #FFF;
+    position: relative;
+    margin: 0 auto;
+    border-radius: 5px;
+    margin-bottom: 15px;
+    transition: all 0.6s;
+}
+
+.side-nav a:nth-child(3) {
+    line-height: 14px;
+    padding: 5px 0;
+    height: 29px;
+    position: relative;
+}
+
+.side-nav a:nth-child(2) {
+    background-color: #f35321;
+}
+
+.side-nav a:hover {
+    background-color: #258566;
+}
+
+.side-nav a:nth-child(3) i {
+    width: 35px;
+    height: 35px;
+    background: url(../images/house/icon-sum.png) no-repeat;
+    background-position: -251px -7px;
+    position: absolute;
+    left: 41px;
+    top: 13px;
+    animation: heart 1.5s infinite linear
+}
+
+@keyframes heart {
+    0% {
+        top: 4px;
+    }
+    50% {
+        top: 13px;
+    }
+    100% {
+        top: 4px;
+    }
+}
+
+.side-nav a:nth-child(4) {
+    width: 26px;
+    height: 26px;
+    display: none;
+    margin: 0 auto;
+    background: url(../images/house/icon-sum.png) center center no-repeat;
+    background-position: -59px -1px;
+}
+
+.side-nav a:nth-child(4):hover {
+    background-position: -59px -30px;
 }
